// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`radioGroup组件 快照测试 基本使用 1`] = `
<div
<<<<<<< HEAD
  className="sc-AxjAm sc-AxirZ bAOEJO sinoui-radio-group"
>
  <label
    className="sc-AxgMl sc-AxheI dOlXvT sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
=======
  className="FormGroup-urrsti-0 RadioGroup__FormGroupWrapper-sc-12x31w9-0 cGSDzd sinoui-radio-group"
>
  <label
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 cZgDxL sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio"
>>>>>>> origin/bottomNavigation
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
<<<<<<< HEAD
        className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
<<<<<<< HEAD
        className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
        className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
        onChange={[Function]}
        type="radio"
        value="1"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框1
    </span>
  </label>
  <label
<<<<<<< HEAD
    className="sc-AxgMl sc-AxheI dOlXvT sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
=======
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 cZgDxL sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio"
>>>>>>> origin/bottomNavigation
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
<<<<<<< HEAD
        className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
<<<<<<< HEAD
        className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
        className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
        onChange={[Function]}
        type="radio"
        value="2"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框2
    </span>
  </label>
  <label
<<<<<<< HEAD
    className="sc-AxgMl sc-AxheI dOlXvT sinoui-form-control-label"
  >
    <span
      checked={true}
      className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr kBTeec sinoui-radio sinoui-radio--checked"
=======
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 cZgDxL sinoui-form-control-label"
  >
    <span
      checked={true}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 bxzqbt sinoui-radio sinoui-radio--checked"
>>>>>>> origin/bottomNavigation
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
<<<<<<< HEAD
        className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={true}
<<<<<<< HEAD
        className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
        className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
        onChange={[Function]}
        type="radio"
        value="3"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框3
    </span>
  </label>
  <label
<<<<<<< HEAD
    className="sc-AxgMl sc-AxheI dOlXvT sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
=======
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 cZgDxL sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio"
>>>>>>> origin/bottomNavigation
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
<<<<<<< HEAD
        className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
<<<<<<< HEAD
        className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
        className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
        onChange={[Function]}
        type="radio"
        value="4"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框4
    </span>
  </label>
</div>
`;

exports[`radioGroup组件 快照测试 设置只读 1`] = `
Array [
  <div
<<<<<<< HEAD
    className="sc-AxjAm sc-AxirZ bAOEJO sinoui-radio-group sinoui-radio-group--disabled"
  >
    <label
      className="sc-AxgMl sc-AxheI gLhyWr sinoui-form-control-label"
=======
    className="FormGroup-urrsti-0 RadioGroup__FormGroupWrapper-sc-12x31w9-0 cGSDzd sinoui-radio-group sinoui-radio-group--disabled"
  >
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 AQksP sinoui-form-control-label"
>>>>>>> origin/bottomNavigation
      disabled={true}
    >
      <span
        checked={false}
<<<<<<< HEAD
        className="sc-AxiKw gsBAeJ sinoui-base-button sc-Axmtr cmIXtK sinoui-radio sinoui-radio--disabled"
=======
        className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio sinoui-radio--disabled"
>>>>>>> origin/bottomNavigation
        color="primary"
        disabled={true}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
<<<<<<< HEAD
          className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
<<<<<<< HEAD
          className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
          className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
          disabled={true}
          onChange={[Function]}
          type="radio"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框1
      </span>
    </label>
    <label
<<<<<<< HEAD
      className="sc-AxgMl sc-AxheI gLhyWr sinoui-form-control-label"
=======
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 AQksP sinoui-form-control-label"
>>>>>>> origin/bottomNavigation
      disabled={true}
    >
      <span
        checked={false}
<<<<<<< HEAD
        className="sc-AxiKw gsBAeJ sinoui-base-button sc-Axmtr cmIXtK sinoui-radio sinoui-radio--disabled"
=======
        className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio sinoui-radio--disabled"
>>>>>>> origin/bottomNavigation
        color="primary"
        disabled={true}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
<<<<<<< HEAD
          className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
<<<<<<< HEAD
          className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
          className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
          disabled={true}
          onChange={[Function]}
          type="radio"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框2
      </span>
    </label>
    <label
<<<<<<< HEAD
      className="sc-AxgMl sc-AxheI gLhyWr sinoui-form-control-label"
=======
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 AQksP sinoui-form-control-label"
>>>>>>> origin/bottomNavigation
      disabled={true}
    >
      <span
        checked={false}
<<<<<<< HEAD
        className="sc-AxiKw gsBAeJ sinoui-base-button sc-Axmtr cmIXtK sinoui-radio sinoui-radio--disabled"
=======
        className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio sinoui-radio--disabled"
>>>>>>> origin/bottomNavigation
        color="primary"
        disabled={true}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
<<<<<<< HEAD
          className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
<<<<<<< HEAD
          className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
          className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
          disabled={true}
          onChange={[Function]}
          type="radio"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框3
      </span>
    </label>
    <label
<<<<<<< HEAD
      className="sc-AxgMl sc-AxheI gLhyWr sinoui-form-control-label"
=======
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 AQksP sinoui-form-control-label"
>>>>>>> origin/bottomNavigation
      disabled={true}
    >
      <span
        checked={false}
<<<<<<< HEAD
        className="sc-AxiKw gsBAeJ sinoui-base-button sc-Axmtr cmIXtK sinoui-radio sinoui-radio--disabled"
=======
        className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio sinoui-radio--disabled"
>>>>>>> origin/bottomNavigation
        color="primary"
        disabled={true}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
<<<<<<< HEAD
          className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
<<<<<<< HEAD
          className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
          className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
          disabled={true}
          onChange={[Function]}
          type="radio"
          value="4"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框4
      </span>
    </label>
  </div>,
  <div
<<<<<<< HEAD
    className="sc-AxjAm sc-AxirZ bAOEJO sinoui-radio-group sinoui-radio-group--readOnly"
  >
    <label
      className="sc-AxgMl sc-AxheI gLhyWr sinoui-form-control-label"
=======
    className="FormGroup-urrsti-0 RadioGroup__FormGroupWrapper-sc-12x31w9-0 cGSDzd sinoui-radio-group sinoui-radio-group--readOnly"
  >
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 AQksP sinoui-form-control-label"
>>>>>>> origin/bottomNavigation
      readOnly={true}
    >
      <span
        checked={false}
<<<<<<< HEAD
        className="sc-AxiKw gsBAeJ sinoui-base-button sc-Axmtr cmIXtK sinoui-radio sinoui-radio--readOnly"
=======
        className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio sinoui-radio--readOnly"
>>>>>>> origin/bottomNavigation
        color="primary"
        disabled={true}
        onBlur={false}
        onFocus={false}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
<<<<<<< HEAD
          className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
<<<<<<< HEAD
          className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
          className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
          onChange={[Function]}
          readOnly={true}
          type="radio"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框1
      </span>
    </label>
    <label
<<<<<<< HEAD
      className="sc-AxgMl sc-AxheI gLhyWr sinoui-form-control-label"
=======
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 AQksP sinoui-form-control-label"
>>>>>>> origin/bottomNavigation
      readOnly={true}
    >
      <span
        checked={false}
<<<<<<< HEAD
        className="sc-AxiKw gsBAeJ sinoui-base-button sc-Axmtr cmIXtK sinoui-radio sinoui-radio--readOnly"
=======
        className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio sinoui-radio--readOnly"
>>>>>>> origin/bottomNavigation
        color="primary"
        disabled={true}
        onBlur={false}
        onFocus={false}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
<<<<<<< HEAD
          className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
<<<<<<< HEAD
          className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
          className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
          onChange={[Function]}
          readOnly={true}
          type="radio"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框2
      </span>
    </label>
    <label
<<<<<<< HEAD
      className="sc-AxgMl sc-AxheI gLhyWr sinoui-form-control-label"
=======
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 AQksP sinoui-form-control-label"
>>>>>>> origin/bottomNavigation
      readOnly={true}
    >
      <span
        checked={false}
<<<<<<< HEAD
        className="sc-AxiKw gsBAeJ sinoui-base-button sc-Axmtr cmIXtK sinoui-radio sinoui-radio--readOnly"
=======
        className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio sinoui-radio--readOnly"
>>>>>>> origin/bottomNavigation
        color="primary"
        disabled={true}
        onBlur={false}
        onFocus={false}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
<<<<<<< HEAD
          className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
<<<<<<< HEAD
          className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
          className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
          onChange={[Function]}
          readOnly={true}
          type="radio"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框3
      </span>
    </label>
    <label
<<<<<<< HEAD
      className="sc-AxgMl sc-AxheI gLhyWr sinoui-form-control-label"
=======
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 AQksP sinoui-form-control-label"
>>>>>>> origin/bottomNavigation
      readOnly={true}
    >
      <span
        checked={false}
<<<<<<< HEAD
        className="sc-AxiKw gsBAeJ sinoui-base-button sc-Axmtr cmIXtK sinoui-radio sinoui-radio--readOnly"
=======
        className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio sinoui-radio--readOnly"
>>>>>>> origin/bottomNavigation
        color="primary"
        disabled={true}
        onBlur={false}
        onFocus={false}
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
<<<<<<< HEAD
          className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
<<<<<<< HEAD
          className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
          className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
          onChange={[Function]}
          readOnly={true}
          type="radio"
          value="4"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框4
      </span>
    </label>
  </div>,
]
`;

exports[`radioGroup组件 快照测试 设置标题显示位置 1`] = `
Array [
  <div
<<<<<<< HEAD
    className="sc-AxjAm sc-AxirZ bAOEJO sinoui-radio-group"
  >
    <label
      className="sc-AxgMl sc-AxheI dOlXvT sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
=======
    className="FormGroup-urrsti-0 RadioGroup__FormGroupWrapper-sc-12x31w9-0 cGSDzd sinoui-radio-group"
  >
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 cZgDxL sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio"
>>>>>>> origin/bottomNavigation
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
<<<<<<< HEAD
          className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
<<<<<<< HEAD
          className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
          className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
          onChange={[Function]}
          type="radio"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框1
      </span>
    </label>
    <label
<<<<<<< HEAD
      className="sc-AxgMl sc-AxheI dOlXvT sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
=======
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 cZgDxL sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio"
>>>>>>> origin/bottomNavigation
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
<<<<<<< HEAD
          className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
<<<<<<< HEAD
          className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
          className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
          onChange={[Function]}
          type="radio"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框2
      </span>
    </label>
    <label
<<<<<<< HEAD
      className="sc-AxgMl sc-AxheI dOlXvT sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
=======
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 cZgDxL sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio"
>>>>>>> origin/bottomNavigation
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
<<<<<<< HEAD
          className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
<<<<<<< HEAD
          className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
          className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
          onChange={[Function]}
          type="radio"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框3
      </span>
    </label>
  </div>,
  <div
<<<<<<< HEAD
    className="sc-AxjAm sc-AxirZ bvZHYA sinoui-radio-group"
  >
    <label
      className="sc-AxgMl sc-AxheI loEPsu sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
=======
    className="FormGroup-urrsti-0 RadioGroup__FormGroupWrapper-sc-12x31w9-0 cGSDzd sinoui-radio-group"
  >
    <label
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 gFFMKC sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio"
>>>>>>> origin/bottomNavigation
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
<<<<<<< HEAD
          className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
<<<<<<< HEAD
          className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
          className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
          onChange={[Function]}
          type="radio"
          value="1"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框1
      </span>
    </label>
    <label
<<<<<<< HEAD
      className="sc-AxgMl sc-AxheI loEPsu sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
=======
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 gFFMKC sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio"
>>>>>>> origin/bottomNavigation
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
<<<<<<< HEAD
          className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
<<<<<<< HEAD
          className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
          className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
          onChange={[Function]}
          type="radio"
          value="2"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框2
      </span>
    </label>
    <label
<<<<<<< HEAD
      className="sc-AxgMl sc-AxheI loEPsu sinoui-form-control-label"
    >
      <span
        checked={false}
        className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
=======
      className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 gFFMKC sinoui-form-control-label"
    >
      <span
        checked={false}
        className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio"
>>>>>>> origin/bottomNavigation
        color="primary"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
<<<<<<< HEAD
          className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
          className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
          focusable="false"
          role="presentation"
          size={24}
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <input
          checked={false}
<<<<<<< HEAD
          className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
          className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
          onChange={[Function]}
          type="radio"
          value="3"
        />
      </span>
      <span
        className="sinoui-form-control-label__title"
      >
        单选框3
      </span>
    </label>
  </div>,
]
`;

exports[`radioGroup组件 快照测试 设置纵向排列 1`] = `
<div
<<<<<<< HEAD
  className="sc-AxjAm sc-AxirZ hCgMeA sinoui-radio-group sinoui-radio-group--column"
>
  <label
    className="sc-AxgMl sc-AxheI dOlXvT sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
=======
  className="FormGroup-urrsti-0 RadioGroup__FormGroupWrapper-sc-12x31w9-0 cIOYwa sinoui-radio-group sinoui-radio-group--block"
>
  <label
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 cZgDxL sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio"
>>>>>>> origin/bottomNavigation
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
<<<<<<< HEAD
        className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
<<<<<<< HEAD
        className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
        className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
        onChange={[Function]}
        type="radio"
        value="1"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框1
    </span>
  </label>
  <label
<<<<<<< HEAD
    className="sc-AxgMl sc-AxheI dOlXvT sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
=======
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 cZgDxL sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio"
>>>>>>> origin/bottomNavigation
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
<<<<<<< HEAD
        className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
<<<<<<< HEAD
        className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
        className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
        onChange={[Function]}
        type="radio"
        value="2"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框2
    </span>
  </label>
  <label
<<<<<<< HEAD
    className="sc-AxgMl sc-AxheI dOlXvT sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
=======
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 cZgDxL sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio"
>>>>>>> origin/bottomNavigation
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
<<<<<<< HEAD
        className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
<<<<<<< HEAD
        className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
        className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
        onChange={[Function]}
        type="radio"
        value="3"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框3
    </span>
  </label>
  <label
<<<<<<< HEAD
    className="sc-AxgMl sc-AxheI dOlXvT sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-AxiKw fiAJmc sinoui-base-button sc-Axmtr cmIXtK sinoui-radio"
=======
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 cZgDxL sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio"
>>>>>>> origin/bottomNavigation
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
<<<<<<< HEAD
        className="sc-AxhCb klcZHD sinoui-svg-icon"
=======
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={false}
<<<<<<< HEAD
        className="sc-AxmLO kMIxgv sinoui-radio__input"
=======
        className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
        onChange={[Function]}
        type="radio"
        value="4"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框4
    </span>
  </label>
</div>
`;
